// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="page page-limited"
>
  <withRouter(TutorialSelection)
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
        "version": "0.0.1",
      }
    }
    currentUser={
      {
        "dismissedNotices": {
          "educationPrinciples": false,
        },
        "groups": [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": [],
      }
    }
    willRefreshAutomatically={true}
  />
</div>
`;

exports[`renders correctly 2`] = `
<div
  className="page page-limited"
/>
`;

exports[`renders correctly 3`] = `
<div
  className="page page-limited"
>
  <Alert
    variant="warning"
  >
    <FormattedMessage
      defaultMessage="provisioning.no_analysis_on_main_branch"
      id="provisioning.no_analysis_on_main_branch"
      values={
        {
          "branchName": "master",
        }
      }
    />
  </Alert>
</div>
`;

exports[`renders correctly 4`] = `
<div
  className="page page-limited"
>
  <withRouter(TutorialSelection)
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
        "version": "0.0.1",
      }
    }
    currentUser={
      {
        "dismissedNotices": {
          "educationPrinciples": false,
        },
        "groups": [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": [],
      }
    }
    projectBinding={
      {
        "alm": "github",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
      }
    }
    willRefreshAutomatically={true}
  />
</div>
`;

exports[`should not render the tutorial for applications 1`] = `
<div
  className="page page-limited"
>
  <Alert
    variant="warning"
  >
    provisioning.no_analysis.application
  </Alert>
</div>
`;

exports[`should render another message when there are branches 1`] = `
<div
  className="page page-limited"
>
  <Alert
    variant="warning"
  >
    <FormattedMessage
      defaultMessage="provisioning.no_analysis_on_main_branch.bad_configuration"
      id="provisioning.no_analysis_on_main_branch.bad_configuration"
      values={
        {
          "branchName": "master",
          "branchType": "branches.main_branch",
        }
      }
    />
  </Alert>
</div>
`;

exports[`should render another message when there are branches 2`] = `
<div
  className="page page-limited"
>
  <Alert
    variant="warning"
  >
    <FormattedMessage
      defaultMessage="provisioning.no_analysis_on_main_branch.bad_configuration"
      id="provisioning.no_analysis_on_main_branch.bad_configuration"
      values={
        {
          "branchName": "master",
          "branchType": "branches.main_branch",
        }
      }
    />
  </Alert>
</div>
`;
